syntax = "proto3";

package index;

option go_package = "./proto" ;

import "google/protobuf/timestamp.proto";






service User {
    /*
     * Authenticate the user and creates a session. 
     * If user is not found, 404 user not found error is thrown.
    */
    rpc Login(LoginRequest) returns (LoginResponse);

    /*
     * Creates a user account. 
     * If user already exists, an exception is thrown.  
    */
    rpc Register(RegisterRequest) returns (RegisterResponse);

    /*
     * Creates a reservation for request a car. 
     * If session is invalid, an exception is thrown.
    */
    rpc CreateReservation(CreateReservationRequest) returns (CreateReservationResponse);
    rpc GetReservation(GetReservationRequest) returns  (GetReservationResponse);
    rpc CancelReservation(CancelReservationRequest) returns (CancelReservationResponse);
    rpc GetLatestReservation(GetLatestReservationRequest) returns (GetLatestReservationResponse);
    rpc GetArrivalTime(GetArrivalTimeRequest) returns (GetArrivalTimeResponse);
}

/*

*/

message LoginRequest {
    string username = 1; // 
    string password = 2;
}


message LoginResponse {
    string sessionToken = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string sessionToken = 1;
}

message CreateReservationRequest {
    string startLocation = 1;
    string destination = 2;
    google.protobuf.Timestamp pickupTime = 3;
    string sessionToken = 4;
}

message CreateReservationResponse {

}

message GetReservationRequest {
    string sessionToken = 1;
}

message GetReservationResponse {
    repeated Reservation reservations = 1;
}

message Reservation {
    string startLocation = 1;
    string destination = 2;
    google.protobuf.Timestamp pickupTime = 3;
    string reservationID = 4;
}

message CancelReservationRequest {
    string reservationID = 1;
    string sessionToken = 2;
}

message CancelReservationResponse {

}

message GetLatestReservationRequest {
    string sessionToken = 1;

}

message GetLatestReservationResponse {
    Reservation latestReservation = 1;
    google.protobuf.Timestamp estimatedTimeOnArrival = 2;
}

message GetArrivalTimeRequest {
    string sessionToken = 1;
}

message GetArrivalTimeResponse {
    google.protobuf.Timestamp arrivalTime = 1;
}

enum Exceptions {
    INVALID_INPUT_EXCEPTION = 0;
    UNAUTHORIZED_USER_EXCEPTION = 1;
}
